# rustydump

./: Cargo.toml  README.md
src/: config.rs  decode.rs  demangle.rs  detection.rs  disasm.rs  header.rs  lib.rs  main.rs  output.rs  symbols.rs
src/analysis/: basic_block.rs  cfg.rs  mod.rs
src/decode/: iced.rs  mod.rs  zydis.rs
src/formats/: elf.rs  macho.rs  mod.rs  pe.rs
src/iced/: mod.rs
src/zydis/: mod.rs  output.rs
