[package]
name = "rustydump"
version = "0.9.9"
edition = "2024"

[dependencies]
colored = "3.1.1"
iced-x86 = "1.21.0"
zydis = "4.1.1"
goblin = "0.10.7"
clap = { version = "4.6.1", features = ["derive"] }
rustc-demangle = "0.1.27"
cpp_demangle = "0.5.1"
sha2 = "0.11.0"
md5 = "0.8.0"
crc32fast = "1.5.0"