[package]
name = "rustydump"
version = "0.9.10"
authors = ["dcaondyer"]
description = """
Rustydump is a modern, objdump-compatible binary analysis tool written in Rust for i386 and amd64.
It supports disassembly, symbol inspection, section/header parsing, and control-flow graph generation [EXPERIMENTAL] for multiple object file formats.
It features selectable disassembly backends (iced-x86 and Zydis) and optional IDA-style enhanced output including labels and cross-references.
"""
homepage = "https://github.com/dcaondyer/rustydump"
repository = "https://github.com/dcaondyer/rustydump"
keywords = [
    "disassembler",
    "reverse-engineering",
    "binary-analysis",
    "objdump",
    "objdump-clone"
]
categories = ["command-line-utilities"]
license = "Unlicense OR MIT OR Apache-2.0"
exclude = [
    "/.github/",
    "/target/",
    "/.idea/",
    "/.gitignore/"
]
autotests = false
edition = "2024"
rust-version = "1.93.0"

[dependencies]
colored = "3.1.1"
iced-x86 = "1.21.0"
zydis = "4.1.1"
goblin = "0.10.7"
clap = { version = "4.6.1", features = ["derive"] }
rustc-demangle = "0.1.27"
cpp_demangle = "0.5.1"
sha2 = "0.11.0"
md5 = "0.8.0"
crc32fast = "1.5.0"